--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://root@localhost:3306/hotel-management
+spring.datasource.url=jdbc:mysql://root@localhost:3306/hitmanage
 spring.datasource.username=root
 spring.datasource.password=
 
